--- a/src/static/replx/index.html
+++ b/src/static/replx/index.html
@@ -15,6 +15,7 @@
     <link href="/static/lib/angular-growl-2/0.7.0/angular-growl.min.css" rel="stylesheet" type="text/css">
     <link href="/static/lib/angular-ya-treeview/0.2.2/ya-treeview.css" rel="stylesheet" type="text/css">
     <link href="/static/replx/app.css" rel="stylesheet" type="text/css">
+    <!--
     <script type="text/javascript" src="/static/lib/firebug-lite/4/firebug-lite.js">
 {
     overrideConsole: false,
@@ -23,6 +24,7 @@
     enableTrace: true
 }
 </script>
+-->
   </head>
   <body>
     <div class="container">
@@ -33,15 +35,17 @@
       <div growl="growl"></div>
     </div>
     <!-- start component js -->
-        <!--
+       <!--
     <script src="/static/lib/ace/1.2.3/src-min-noconflict/ace.js"></script>
     <script src="/static/lib/ace/1.2.3/src-min-noconflict/ext-language_tools.js"></script>
+    -->
     <script src="/static/lib/angularjs/1.3.15/angular.js"></script>
     <script src="/static/lib/angularjs/1.3.15/angular-resource.js"></script>
     <script src="/static/lib/angularjs/1.3.15/angular-cookies.js"></script>
     <script src="/static/lib/angularjs/1.3.15/angular-sanitize.js"></script>
     <script src="/static/lib/angularjs/1.3.15/angular-touch.js"></script>
     <script src="/static/lib/angularjs/1.3.15/angular-animate.js"></script>
+    <!--
     <script src="/static/lib/lodash/2.4.1/lodash.min.js"></script>
     <script src="/static/lib/config.js"></script>
     <script src="/static/lib/stacktrace/0.6.0"></script>
@@ -56,15 +60,15 @@
     <script src="/static/lib/angular-breadcrumb/0.4.0/angular-breadcrumb.js"></script>
     <script src="/static/lib/quodatum-directives/0.1.0/directives.js"></script>
     -->
-    <!-- app js -->
-    <script src="/static/replx/feats/term/term.js"></script>
+    <!-- app js 
+    <script src="/static/replx/feats/term/term.js"></script> -->
     <script src="/static/replx/app2.js"></script>
   
     <script>
-        window.onload =function(){
-        console.log("helo");
-        alert("hi");
-        };
+        //window.onload =function(){
+       // console.log("helo");
+      //  alert("hi");
+     //   };
       </script>  
   </body>
 </html>
