ace auto height

--- a/src/static/replx/feats/term/term.html
+++ b/src/static/replx/feats/term/term.html
@@ -6,8 +6,8 @@
 		{{mode}}
 	</div>
 	<div style="  border: 1px solid black;height:{{heightWithOffset(120)}}" resize >
-		<div class="ace-container  ">
-			<div ui-ace="aceOption" ng-model="aceModel" class="ace"></div>
+		<div class="ace_editor_wrapper  ">
+			<div ui-ace="aceOption" ng-model="aceModel" class="ace_editor"></div>
 		</div>
 	</div>
 </div>
